--- a/seccion1/carpeta8/css/base/base.css
+++ b/seccion1/carpeta8/css/base/base.css
@@ -1,5 +1,5 @@
-@import url(_reset.css);
-@import url(_variable.css);
+@import url(reset.css);
+@import url(variable.css);
 
 body{
     background-color: var(--secundary-color);
