--- a/seccion1/css/componentes/button.css
+++ b/seccion1/css/componentes/button.css
@@ -45,3 +45,10 @@
 .button_aceder{
     max-width: 20rem;
 }
+
+@media screen and (max-width: 485px) {
+    .Regresar{
+        display: none;
+    }
+    
+}
